--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-    "name": "express-jwt-example",
-    "version": "1.0.0",
-    "description": "Example project for Express.js with JWT blogpost",
+    "private": true,
     "main": "index.js",
-    "license": "MIT",
     "dependencies": {
         "body-parser": "^1.16.1",
         "chai": "^3.5.0",
+        "cors": "^2.8.5",
         "express": "^4.14.1",
         "jsonwebtoken": "^7.3.0",
         "mocha": "^3.2.0",
